# opendata-ai

./: .env.azure.example  .env.dev-claude.example  .env.example  .env.local.example  .env.production.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  docker-compose.yml  setup.sh
bdap-mcp-server/: Dockerfile  README.md  pyproject.toml
bdap-mcp-server/src/bdap_mcp/: __init__.py  server.py  tools.py
bdap-mcp-server/tests/: test_bdap_tools.py
ckan-mcp-agent/: Dockerfile  README.md  pyproject.toml
ckan-mcp-agent/src/ckan_agent/: __init__.py  api.py  config.py  factory.py  main.py
ckan-mcp-agent/tests/: test_api_parsing.py  test_config.py  test_fill_missing_content.py
ckan-mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
ckan-mcp-server/src/ckan_mcp/: __init__.py  ckan_client.py  server.py  tools.py
ckan-mcp-server/tests/: test_ckan_client.py
istat-mcp-agent/: Dockerfile  README.md  pyproject.toml
istat-mcp-agent/src/istat_agent/: __init__.py  api.py  config.py  factory.py  main.py
istat-mcp-agent/tests/: test_config.py  test_factory.py
maturity-mcp-server/: Dockerfile  README.md  pyproject.toml
maturity-mcp-server/src/maturity_mcp/: __init__.py  semantic.py  server.py  tools.py
maturity-mcp-server/tests/: test_tools.py
opencoesione-mcp-server/: Dockerfile  README.md  pyproject.toml
opencoesione-mcp-server/src/opencoesione_mcp/: __init__.py  local_db.py  server.py  tools.py
opencoesione-mcp-server/tests/: test_query_local.py  test_query_local_idee.py  test_tools.py
opendata-backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
opendata-backend/migrations/: env.py
opendata-backend/migrations/versions/: 0001_initial.py  0002_oc_progetti.py  0003_comuni_anagrafica.py  0004_programma_cache.py  0005_documenti.py  0006_drop_documenti.py  0007_phase0_foundations.py  0008_raw_ingest.py  0009_civic_community.py  0010_subscription_tier.py  0011_stripe_customer_id.py  0012_user_llm_keys.py  0013_monitor.py  0014_monitor_maturity.py  0015_dataplan_plans.py  0016_user_role.py  0017_region_snapshots.py
opendata-backend/scripts/: migrate.sh
opendata-backend/src/opendata_backend/: __init__.py  byok.py  config.py  config_files.py  factory.py  llm_access.py  main.py  osm_map.py  state.py
opendata-backend/src/opendata_backend/a2a/: __init__.py  agent_card.py  executor.py  middleware.py  quality_skill.py  router.py
opendata-backend/src/opendata_backend/auth/: __init__.py  clerk.py  dependencies.py  roles.py
opendata-backend/src/opendata_backend/cache/: __init__.py  by_category.py  classify.py  fetch.py  state.py  store.py
opendata-backend/src/opendata_backend/civic/: __init__.py  checkin.py  diff.py  kpi.py  site.py  site_service.py  snapshot.py
opendata-backend/src/opendata_backend/classify/: __init__.py  anthropic_client.py  service.py
opendata-backend/tests/: test_a2a_quality_skill.py  test_admin_users.py  test_api_key_access.py  test_apriqui.py  test_batch.py  test_byok.py  test_cache_and_ratelimit.py  test_civic_checkin.py  test_civic_diff.py  test_civic_models.py  test_civic_site.py  test_civic_site_service.py  test_civic_snapshot.py  test_ckan_fallback.py  test_classify_service.py  test_clerk_auth.py  test_community.py  test_comuni_ingest.py  test_config.py  test_config_files.py  test_dataplan_backend.py  test_db_models.py  test_documenti.py  test_etl.py  test_factory_lenses.py  test_factory_mcp_failsafe.py  test_features.py  test_geo_filter.py  test_ideas.py  test_ip_ratelimit.py  test_llm_batch.py  test_maturity_markdown.py  test_maturity_service.py  test_migration_0007.py  test_monitor_endpoint.py  test_monitor_notify.py  test_monitor_repository.py  test_monitor_runner.py  test_oc_ingest.py  test_parsing.py  (+24 more)
opendata-mcp-server/: Dockerfile  README.md  pyproject.toml
opendata-mcp-server/src/opendata_mcp/: __init__.py  client.py  server.py  tools.py
opendata-mcp-server/tests/: test_tools.py
opendata-orchestrator/: Dockerfile  README.md  pyproject.toml
opendata-orchestrator/src/orchestrator/: api.py  config.py  factory.py  main.py  osm_map.py  parsing.py  synth.py  workflow.py
opendata-orchestrator/tests/: test_config.py  test_parsing.py  test_synth_merge.py
opendata_core/: README.md  pyproject.toml
opendata_core/src/opendata_core/: __init__.py  portals.py
opendata_core/tests/: test_bdap_client.py  test_binary_converters.py  test_candidate_areas.py  test_casa.py  test_connectors.py  test_dataplan_catalog.py  test_dataplan_kpi.py  test_dataplan_policy.py  test_dataplan_prioritize.py  test_dataplan_privacy.py  test_dataplan_state.py  test_farmacie.py  test_guidance.py  test_istruzione.py  test_landcover.py  test_landscape.py  test_landuse_reconcile.py  test_lavoro.py  test_maturity_coverage.py  test_maturity_gap.py  test_maturity_quality.py  test_maturity_scoring.py  test_monitor_engine.py  test_monitor_maturity_regression.py  test_opendatasoft_client.py  test_publisher.py  test_pug.py  test_quality.py  test_quality_dcat.py  test_quality_dcat_validate.py  test_quality_enrich.py  test_quality_fix.py  test_quality_geo.py  test_quality_geoconvert.py  test_quality_geoschema.py  test_quality_hvd.py  test_quality_normalize.py  test_quality_package.py  test_quality_parquet.py  test_quality_scale.py  (+16 more)
opendata_core/tests/fixtures/: ckan_package_gioia.json
osm-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
osm-mcp/src/osm_mcp/: __init__.py  config.py  html_renderer.py  osm_client.py  server.py  tools.py
osm-mcp/tests/: test_compose_resources.py  test_geojson_builder.py  test_html_renderer.py  test_tools.py  test_zones.py
osm-mcp/tests/fixtures/: ckan_response.json  fixture_relation_industrial.json  fixture_ways_industrial.json
socrata-mcp-server/: Dockerfile  README.md  pyproject.toml
socrata-mcp-server/src/socrata_mcp/: __init__.py  server.py  tools.py
socrata-mcp-server/tests/: test_socrata_tools.py
(+528 files in other folders)
