[project]
name = "istat-mcp-agent"
version = "0.1.0"
description = "Microsoft Agent Framework agent that consumes the ISTAT MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Engineering Studio" }]
dependencies = [
    "agent-framework>=1.0.0b1",
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
azure = [
    "agent-framework-foundry>=1.0.0b1",
    "azure-identity>=1.17.0",
]
claude = [
    "agent-framework-anthropic>=1.0.0b1",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
istat-agent = "istat_agent.main:cli"
istat-agent-api = "istat_agent.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/istat_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
