[project]
name = "maturity-mcp-server"
version = "0.1.0"
description = "MCP server: open-data maturity assessment (ODM 2025 + AgID) over any CKAN portal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Engineering Studio" }]
dependencies = [
    "opendata-core>=0.1.0",
    "mcp>=1.2.0,<2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "anyio>=4.4.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
    # Haiku SOLO per giudizi semantici (comprensibilità descrizione); opzionale a runtime.
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
]

[project.scripts]
maturity-mcp-server = "maturity_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maturity_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
