[project]
name = "opendata-backend"
version = "0.1.0"
description = "Unified FastAPI backend that absorbs the orchestrator + specialist agents, exposes /datasets/*, /me/*, /api-keys/*, /webhooks/clerk over an authenticated REST surface, and uses opendata-core for all upstream fetches."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Engineering Studio" }]
dependencies = [
    "opendata-core>=0.1.0",
    "agent-framework>=1.0.0b1",
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "pyjwt[crypto]>=2.9.0",
    "svix>=1.30.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.17.0",
    "agent-framework-foundry>=1.0.0b1",
]
claude = [
    "agent-framework-anthropic>=1.0.0b1",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.scripts]
opendata-agent = "opendata_backend.cli:cli"
opendata-backend-api = "opendata_backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendata_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
