[project]
name = "opendata-mcp-server"
version = "0.1.0"
description = "Product MCP server: exposes opendata-ai's four modes (Esplora / Territorio / Maturità / Qualità + classify) as MCP tools by proxying the backend REST API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Engineering Studio" }]
dependencies = [
    "mcp>=1.2.0,<2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "anyio>=4.4.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
]

[project.scripts]
opendata-mcp-server = "opendata_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendata_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
