[project]
name = "opendata-core"
version = "0.1.0"
description = "Shared async clients for CKAN, SDMX (ISTAT/Eurostat/OECD) and OSM rendering — consumed by both the MCP servers and the unified opendata-backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Engineering Studio" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "cachetools>=5.3.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Convertitori avanzati del Quality Lab (#101): dipendenze pesanti tenute fuori
# dal core puro — senza questo extra `csv_to_parquet` degrada con ok=False.
converters = [
    "pyarrow>=16.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
    "pyarrow>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendata_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
