[project]
name = "osm-mcp"
version = "0.1.0"
description = "MCP server exposing OpenStreetMap tools (Nominatim, Overpass, OSRM)"
requires-python = ">=3.11"
dependencies = [
    "opendata-core>=0.1.0",
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "geojson>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
osm-mcp = "osm_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_mcp"]

[tool.ruff]
line-length = 100
